<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="user"
            type="com.dur4n.ticketsea.data.model.user.User" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.signIn.SignInActivity">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <TextView
            android:id="@+id/tvSignInTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/tvTileSingUp"
            android:textAlignment="center"
            android:textSize="20dp"
            app:layout_constraintEnd_toStartOf="@+id/glLeft"
            app:layout_constraintHorizontal_bias="0.468"
            app:layout_constraintStart_toStartOf="@+id/glRight"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSignin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/glLeft"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/glRight"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsernameSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tilPassword"
            app:layout_constraintEnd_toStartOf="@+id/glLeft"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/glRight"
            app:layout_constraintTop_toTopOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieUsernameSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edUsername"
                android:text="@{user.username}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toStartOf="@+id/glLeft"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/glRight"
            app:layout_constraintTop_toBottomOf="@id/tilUsernameSignIn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edPassword"
                android:text="@{user.password}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SignUp"
            app:layout_constraintEnd_toStartOf="@+id/glLeft"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
